PR comment changes -> example.env

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ BOT_USER_ID=0
 GUILD_ID=0
 GUILD_HISTORY_CHANNEL=0
 GUILD_ANNOUNCEMENTS_CHANNEL=0
+GUILD_COMMAND_CHANNEL=0
+GUILD_STUDY_COURSE_CHANNEL=0
+
+GUILD_INF_ROLE=0
+GUILD_WI_ROLE=0
+GUILD_ET_ROLE=0
+GUILD_MCD_ROLE=0
