--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
