--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ GUILD_HISTORY_CHANNEL=0
 GUILD_ANNOUNCEMENTS_CHANNEL=0
 GUILD_COMMAND_CHANNEL=0
 GUILD_STUDY_COURSE_CHANNEL=0
+GUILD_ERROR_CHANNEL=0
 
 GUILD_INF_ROLE=0
 GUILD_WI_ROLE=0
@@ -22,3 +23,5 @@ GUILD_MCD_ROLE=0
 
 GUILD_FSR_ROLE=0
 GUILD_TUTOR_ROLE=0
+
+GUILD_DEBUG_ROLE=0
