--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ GUILD_ANNOUNCEMENTS_CHANNEL=0
 GUILD_COMMAND_CHANNEL=0
 GUILD_STUDY_COURSE_CHANNEL=0
 GUILD_ERROR_CHANNEL=0
+GUILD_GAMES_CHANNEL=0
 
 GUILD_INF_ROLE=0
 GUILD_WI_ROLE=0
