--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ GUILD_INF_ROLE=0
 GUILD_WI_ROLE=0
 GUILD_ET_ROLE=0
 GUILD_MCD_ROLE=0
+GUILD_EXTERNAL_ROLE=0
 
 GUILD_FSR_ROLE=0
 GUILD_TUTOR_ROLE=0
